<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shrek"
    tools:context="com.randalljuan.proyecto3_mobile_b95212_b97452.ui.view.MainActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/tvCivilStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/tv_civil_status"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/tv_civil_status"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:text="@string/tv_civil_status" />

        <EditText
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/tv_address"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/tv_address"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:text="@string/tv_address" />

        <EditText
            android:id="@+id/tvPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/tv_phone_1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/tv_phone_1"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tvPhone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/tv_phone_2"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/tv_phone_2"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:color="@color/white"
            android:text="@string/btn_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/btn_update" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>